# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  links.db  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: github-actions.yml  ping-pong.yml
app/: database.py  main.py  models.py  repository.py  routes.py
config/: nginx.conf
devops_engineer_from_scratch_project_313.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ping_pong/: database.py  main.py  models.py  routes.py
tests/: conftest.py  test_links_api.py  test_links_crud.py  test_links_pagination.py  test_links_validation.py  test_ping_pong.py
unit_tests/: test_links_api.py
