[project]
name = "devops-engineer-from-scratch-project-313"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ping_pong"]
